# tourism_app

./: README.md
app/TourismApp/: CMakeLists.txt  adminwindow.cpp  adminwindow.h  adminwindow.ui  interestedpackageswindow.cpp  interestedpackageswindow.h  interestedpackageswindow.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myorderswindow.cpp  myorderswindow.h  myorderswindow.ui  profilewindow.cpp  profilewindow.h  profilewindow.ui  registerwindow.cpp  registerwindow.h  registerwindow.ui
app/TourismApp/controllers/: admincontroller.cpp  admincontroller.h  authcontroller.cpp  authcontroller.h  clientcontroller.cpp  clientcontroller.h  ordercontroller.cpp  ordercontroller.h
app/TourismApp/database/: databasemanager.cpp  databasemanager.h
app/TourismApp/models/: user.h
database/: schema.sql  seed.sql
models/: client.h
